# badinka

./: .gitignore  Makefile  README.md  pyproject.toml
badinka/: __init__.py  _base.py  _chaining.py  _conductor.py  _config.py  _documents.py  _generation.py  _logging.py  _parsing.py  _tools.py
docs/: .firebaserc  README.jinja2.md  gen.py  howto.md  motivation.md
docs/public/: 404.html  index.html
examples/: chain0.py  gen0.py  gen1.py  gen2.py  gen3.py  gen4.py  rag0.py  rag1.py  rag2.py  tool0.py
tests/: conftest.py  test_conductor.py  test_documentstore.py  test_generation.py
